Clarify data directories, and make them all relative.
Make submodule checkout explicit in README

--- a/notebook/stain_and_train_for_DMNoV.ipynb
+++ b/notebook/stain_and_train_for_DMNoV.ipynb
@@ -23,6 +23,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ff541a7f-4ded-4309-9c0c-be05dc72ba6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Real vs Fake Config\n",
+    "is_synthetic = True\n",
+    "if is_synthetic:\n",
+    "    datadir = \"./Data/fake\"  # Input examples supplied in the repo\n",
+    "else:\n",
+    "    datadir = \"./Data/real\"  # Not supplied"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "76665641-5a49-4cb0-856b-ad25dde4f536",
    "metadata": {
     "pycharm": {
@@ -103,6 +118,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4b88cef-5f0e-490f-8b98-a4206d211abb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Destination location for stained png images\n",
+    "# Expecting PD and Control subdirectories to exist\n",
+    "dump_path_full = f\"{datadir}/full_stain_dump\"\n",
+    "dump_path_segmented = f\"{datadir}/segmented_dump\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "9a4f8a7c-9ae3-4707-8e38-6393a741a684",
    "metadata": {
@@ -127,36 +155,11 @@
    "outputs": [],
    "source": [
     "# Get the positive runs and negative runs - EXAMPLE CONFIG FOR FAKE DATA\n",
+    "if is_synthetic:\n",
+    "    positive_run = glob(f\"{datadir}/input/PD/*.png\")\n",
+    "    negative_run = glob(f\"{datadir}/input/Control/*.png\")\n",
     "\n",
-    "positive_run = glob(\"/Data/input_fake/PD/*.png\")\n",
-    "negative_run = glob(\"/Data/input_fake/Control/*.png\")\n",
-    "\n",
-    "dump_path_full = \"/Data/output_fake/full_stain_dump\"  # Expecting PD and Control subdirectories to exist\n",
-    "dump_path_segmented = \"/Data/output_fake/segmented_dump\"  # Expecting PD and Control subdirectories to exist\n",
-    "\n",
-    "# Use all slides\n",
-    "\n",
-    "positive_run_kwargs = [\n",
-    "    {\n",
-    "        \"slide_file\": x,\n",
-    "        \"is_synthetic\": True,\n",
-    "        \"dump_path_full\": dump_path_full,\n",
-    "        \"dump_path_segmented\": dump_path_segmented,\n",
-    "        \"subdirectory\": \"PD\",\n",
-    "    }\n",
-    "    for x in positive_run\n",
-    "]\n",
-    "\n",
-    "negative_run_kwargs = [\n",
-    "    {\n",
-    "        \"slide_file\": x,\n",
-    "        \"is_synthetic\": True,\n",
-    "        \"dump_path_full\": dump_path_full,\n",
-    "        \"dump_path_segmented\": dump_path_segmented,\n",
-    "        \"subdirectory\": \"Control\",\n",
-    "    }\n",
-    "    for x in negative_run\n",
-    "]"
+    "    # Use all fake slides"
    ]
   },
   {
@@ -184,40 +187,51 @@
    "outputs": [],
    "source": [
     "# Get the positive runs and negative runs- EXAMPLE CONFIG FOR REAL DATA\n",
+    "if not is_synthetic:\n",
+    "    positive_run = [x for x in glob(f\"{datadir}/input/PD/*.svs\") if \"-17_\" in x]\n",
+    "    negative_run = [x for x in glob(f\"{datadir}/input/Control/*.svs\") if \"-17_\" in x]\n",
     "\n",
-    "positive_run = glob(\"/Data/input/PD/*.svs\")\n",
-    "negative_run = glob(\"/Data/input/Control/*.svs\")\n",
-    "\n",
-    "dump_path_full = (\n",
-    "    \"/Data/output/full_stain_dump\"  # Expecting PD and Control subdirectories to exist\n",
-    ")\n",
-    "dump_path_segmented = (\n",
-    "    \"/Data/output/segmented_dump\"  # Expecting PD and Control subdirectories to exist\n",
-    ")\n",
-    "# Only look at Braak 1, slide 17 for this run (The Slide index is in the filename)\n",
-    "\n",
+    "    # Only look at Braak 1, slide 17 for this run (The Slide index is in the filename)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30a494ee-83fb-4054-936e-3b6ad232be14",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Run preprocessing on slide data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e760a487-058c-4eb8-9640-9e7efee96d40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Prepare parameters for colourise_slide_and_segment jobs\n",
     "positive_run_kwargs = [\n",
     "    {\n",
     "        \"slide_file\": x,\n",
-    "        \"is_synthetic\": False,\n",
+    "        \"is_synthetic\": is_synthetic,\n",
     "        \"dump_path_full\": dump_path_full,\n",
     "        \"dump_path_segmented\": dump_path_segmented,\n",
     "        \"subdirectory\": \"PD\",\n",
     "    }\n",
     "    for x in positive_run\n",
-    "    if \"-17_\" in x\n",
     "]\n",
     "\n",
     "negative_run_kwargs = [\n",
     "    {\n",
     "        \"slide_file\": x,\n",
-    "        \"is_synthetic\": False,\n",
+    "        \"is_synthetic\": is_synthetic,\n",
     "        \"dump_path_full\": dump_path_full,\n",
     "        \"dump_path_segmented\": dump_path_segmented,\n",
     "        \"subdirectory\": \"Control\",\n",
     "    }\n",
     "    for x in negative_run\n",
-    "    if \"-17_\" in x\n",
     "]"
    ]
   },
@@ -232,15 +246,15 @@
    },
    "outputs": [],
    "source": [
-    "# Produce the slide sections, and full stains for the PD and Control groups for Slide 17.\n",
-    "# We set 2 workers here, which can be increased or decreased depending on available compute.\n",
-    "# Running time on 3090 (utilisation around 30%), 10 hours.\n",
+    "# Produce the slide sections, and full stains for the PD and Control groups for Slide 17 (real data).\n",
+    "# We set 1 workers here, which can be increased or decreased depending on available compute.\n",
+    "# For the real dataset, running time on 3090 (utilisation around 30%), 10 hours.\n",
     "\n",
     "_ = pqdm(\n",
-    "    positive_run_kwargs, colourise_slide_and_segment, n_jobs=2, argument_type=\"kwargs\"\n",
+    "    positive_run_kwargs, colourise_slide_and_segment, n_jobs=1, argument_type=\"kwargs\"\n",
     ")\n",
     "_ = pqdm(\n",
-    "    negative_run_kwargs, colourise_slide_and_segment, n_jobs=2, argument_type=\"kwargs\"\n",
+    "    negative_run_kwargs, colourise_slide_and_segment, n_jobs=1, argument_type=\"kwargs\"\n",
     ")"
    ]
   },
@@ -255,7 +269,7 @@
    "source": [
     "## Generating testing and training sets for our filtered patches\n",
     "\n",
-    "Out filtered patches will now contain a chunk of legitimate stains, as well as edge cases (from the edge of the slide) and foreign bodies (like mould etc).  We will chunk these into train and test sets.  Note, this needs only to be done once, so this can be skipped if you have already done this previously."
+    "Our filtered patches will now contain a chunk of legitimate stains, as well as edge cases (from the edge of the slide) and foreign bodies (like mould etc).  We will chunk these into train and test sets.  Note, this needs only to be done once, so this can be skipped if you have already done this previously."
    ]
   },
   {
@@ -271,7 +285,7 @@
    "source": [
     "# Now we have our folders, we need to create a training and validation set.\n",
     "# We will use a clean copy of the data for performance, repeatability and safety.\n",
-    "training_dump_path = \"/Data/output/training_dump\""
+    "training_dump_path = f\"{datadir}/training_dump\""
    ]
   },
   {
@@ -285,28 +299,24 @@
    },
    "outputs": [],
    "source": [
-    "# Should we copy files to create training dataset? (usually skip this cell since the data is already prepared)\n",
-    "skip = True\n",
-    "\n",
-    "# Splits\n",
-    "prop_data_train = 0.75\n",
+    "# Should we copy files to create training dataset?\n",
+    "# Skip this cell if the data has already been prepared\n",
+    "# Do not run twice as it does not remove old datasets.\n",
+    "skip = len(glob(f\"{training_dump_path}/train/*/*.png\")) > 0\n",
     "\n",
     "if not skip:\n",
-    "    # Make the directory structure to save our files\n",
+    "    # Splits\n",
+    "    prop_data_train = 0.75\n",
+    "\n",
+    "    # Copy and partition the files (train and val)\n",
     "    for s in [\"Control\", \"PD\"]:\n",
-    "        pathlib.Path(training_dump_path + f\"/train/{s}\").mkdir(\n",
-    "            parents=True, exist_ok=True\n",
-    "        )\n",
-    "        pathlib.Path(training_dump_path + f\"/val/{s}\").mkdir(\n",
-    "            parents=True, exist_ok=True\n",
-    "        )\n",
     "        for file in glob(f\"{dump_path_segmented}/{s}/*.png\"):\n",
     "            # basename for dumping out\n",
     "            base = os.path.basename(file)\n",
     "            if random.random() > (1.0 - prop_data_train):\n",
-    "                shutil.copyfile(file, training_dump_path + f\"/train/{s}/\" + base)\n",
+    "                shutil.copyfile(file, f\"{training_dump_path}/train/{s}/\" + base)\n",
     "            else:\n",
-    "                shutil.copyfile(file, training_dump_path + f\"/val/{s}/\" + base)"
+    "                shutil.copyfile(file, f\"{training_dump_path}/val/{s}/\" + base)"
    ]
   },
   {
@@ -350,8 +360,7 @@
    "outputs": [],
    "source": [
     "# Our dump path for our model training run, model checkpoints will be saved here\n",
-    "model_dump_dir = \"/Data/output/model_dump\"\n",
-    "pathlib.Path(model_dump_dir).mkdir(parents=True, exist_ok=True)"
+    "model_dump_dir = f\"{datadir}/model_dump\""
    ]
   },
   {
@@ -560,8 +569,8 @@
    "outputs": [],
    "source": [
     "# This is the file we will mark with binary results\n",
-    "file_to_stain = \"/Data/output/full_stain_dump/PD/PD788-17_A-syn.svs_synthetic_stain.png\"\n",
-    "marker_output_path = \"/Data/output/full_stain_PD_with_regions\""
+    "file_to_stain = f\"{datadir}/full_stain_dump/PD/slide_100.png_synthetic_stain.png\"\n",
+    "marker_output_path = f\"{datadir}/full_stain_PD_with_regions\""
    ]
   },
   {
