Expose batch size etc. on CLI and add integration test script

--- a/notebook/stain_and_train_for_DMNoV.ipynb
+++ b/notebook/stain_and_train_for_DMNoV.ipynb
@@ -159,7 +159,9 @@
     "    positive_run = glob(f\"{datadir}/input/PD/*.png\")\n",
     "    negative_run = glob(f\"{datadir}/input/Control/*.png\")\n",
     "\n",
-    "    # Use all fake slides"
+    "# For speed, may reduce slides used by slicing these arrays (e.g. first 2)\n",
+    "# positive_run = positive_run[0:2]\n",
+    "# negative_run = negative_run[0:2]"
    ]
   },
   {
@@ -187,11 +189,10 @@
    "outputs": [],
    "source": [
     "# Get the positive runs and negative runs- EXAMPLE CONFIG FOR REAL DATA\n",
+    "# Only look at Braak 1, slide 17 for this run (The Slide index is in the filename)\n",
     "if not is_synthetic:\n",
     "    positive_run = [x for x in glob(f\"{datadir}/input/PD/*.svs\") if \"-17_\" in x]\n",
-    "    negative_run = [x for x in glob(f\"{datadir}/input/Control/*.svs\") if \"-17_\" in x]\n",
-    "\n",
-    "    # Only look at Braak 1, slide 17 for this run (The Slide index is in the filename)"
+    "    negative_run = [x for x in glob(f\"{datadir}/input/Control/*.svs\") if \"-17_\" in x]"
    ]
   },
   {
@@ -247,7 +248,7 @@
    "outputs": [],
    "source": [
     "# Produce the slide sections, and full stains for the PD and Control groups for Slide 17 (real data).\n",
-    "# We set 1 workers here, which can be increased or decreased depending on available compute.\n",
+    "# We set 1 workers here, which can be increased depending on available compute.\n",
     "# For the real dataset, running time on 3090 (utilisation around 30%), 10 hours.\n",
     "\n",
     "_ = pqdm(\n",
@@ -360,7 +361,12 @@
    "outputs": [],
    "source": [
     "# Our dump path for our model training run, model checkpoints will be saved here\n",
-    "model_dump_dir = f\"{datadir}/model_dump\""
+    "model_dump_dir = f\"{datadir}/model_dump\"\n",
+    "batch_size = 32  # Adjust for memory constraints (may effect results)\n",
+    "num_epochs = 500  # Adjust for time available for training (may effect results)\n",
+    "\n",
+    "# Note, if training fails even with small memory requirements, you may need to restart the kernel\n",
+    "# (The staining model may not have released its memory.)"
    ]
   },
   {
@@ -377,7 +383,9 @@
     "# Start a timer\n",
     "start_time = time.time()\n",
     "\n",
-    "latest_model_name = train_model(training_dump_path, model_dump_dir)\n",
+    "latest_model_name = train_model(\n",
+    "    training_dump_path, model_dump_dir, batch_size, num_epochs\n",
+    ")\n",
     "\n",
     "time_elapsed = time.time() - start_time\n",
     "print(f\"Training complete in {time_elapsed // 60}m {time_elapsed % 60}s\")"
@@ -439,7 +447,8 @@
     "# Now we can run validation, on slide and case level\n",
     "# latest_model_name will have our last model, or it maybe specified manually.\n",
     "# E.g. model_file = f\"{model_dump_dir}/PDNET_checkpoint_490_16_18_48\"\n",
-    "model_file = f\"{model_dump_dir}/{latest_model_name}\""
+    "model_file = f\"{model_dump_dir}/{latest_model_name}\"\n",
+    "batch_size = 32  # Adjust for memory constraints (may effect results)"
    ]
   },
   {
@@ -453,7 +462,7 @@
    },
    "outputs": [],
    "source": [
-    "output_data_and_labels = validate(model_file, training_dump_path)"
+    "output_data_and_labels = validate(model_file, training_dump_path, batch_size)"
    ]
   },
   {
@@ -569,7 +578,7 @@
    "outputs": [],
    "source": [
     "# This is the file we will mark with binary results\n",
-    "file_to_stain = f\"{datadir}/full_stain_dump/PD/slide_100.png_synthetic_stain.png\"\n",
+    "file_to_stain = f\"{datadir}/full_stain_dump/PD/slide_102.png_synthetic_stain.png\"\n",
     "marker_output_path = f\"{datadir}/full_stain_PD_with_regions\""
    ]
   },
